--- a/client/src/app/dashboard/dashboard.component.html
+++ b/client/src/app/dashboard/dashboard.component.html
@@ -439,8 +439,13 @@
   </div>
   <!-------------------------------FIN cartes recherche------------------------------------------->
 
+
+
+
+
   <!---------------------liste A completer ------------------------->
   <div *ngIf="vueCarte == 'false' && !searchActivated">
+    <h4>Formulaires à compléter</h4>
     <table mat-table [dataSource]="aCompleterCards" id="forms-table">  
       <ng-container matColumnDef="idForm">
         <th mat-header-cell *matHeaderCellDef> id </th>
@@ -522,6 +527,7 @@
   
   <!---------------------liste Autres ------------------------->
   <div *ngIf="vueCarte == 'false' && !searchActivated">
+    <h4>Autres formulaires</h4>
     <table mat-table [dataSource]="autresCards" id="forms-table">  
       <ng-container matColumnDef="idForm">
         <th mat-header-cell *matHeaderCellDef> id </th>
@@ -602,6 +608,7 @@
 
   <!---------------------liste recherche ------------------------->
   <div *ngIf="vueCarte == 'false' && searchActivated">
+    <h4>Résultats de la recherche ({{displayedCards.length}})</h4>
     <table mat-table [dataSource]="displayedCards" id="forms-table">  
       <ng-container matColumnDef="idForm">
         <th mat-header-cell *matHeaderCellDef> id </th>
