--- a/client/src/app/dashboard/dashboard.component.css
+++ b/client/src/app/dashboard/dashboard.component.css
@@ -12,10 +12,17 @@
 
 h4 {
   text-align: center;
-  background: linear-gradient(to bottom, #eeeeee 0%,#cccccc 100%);
+  background: linear-gradient(to bottom, #f3f3f3 0%,#acacac 100%);
   font-weight: normal;
   padding: 5px;
   margin: 0;
+}
+
+th.mat-header-cell {
+  background: linear-gradient(to bottom, #f3f3f3 0%,#acacac 100%);
+  color: black;
+  font-size: 13px;
+  vertical-align: middle;
 }
 
 .dashboard-card-content {
@@ -23,7 +30,7 @@ h4 {
 }
 
 .dashboard-card mat-expansion-panel {
-  background-image: linear-gradient(#dfdfdf, #acacac);
+  background: linear-gradient(#f3f3f3, #acacac);
   width: 100%;
 }
 
@@ -146,24 +153,22 @@ h4 {
 }
 
 #option-affichage {
-  background-image: linear-gradient(#bbdeea, #367ec1);
+  background: linear-gradient(#bbdeea, #367ec1);
 }
 #modifier {
-  background-image: linear-gradient(#bbdeea, #367ec1);
+  background: linear-gradient(#bbdeea, #367ec1);
   width:110px;
 }
 
 #valider, #approuver {
-  background-image: linear-gradient(#e8f2db, #8cc83c);
+  background: linear-gradient(#e8f2db, #8cc83c);
 }
 
 /* --------------------- VUE LISTE ---------------- */
 
 #forms-table{
-  margin: 5px;
   overflow: auto;
-  width: 80%;
-  margin-left: 25px;
+  width: 100%;
 }
 
 /* TODO fix the padding of the mat-option
