--- a/client/src/app/dashboard/dashboard.component.css
+++ b/client/src/app/dashboard/dashboard.component.css
@@ -151,7 +151,9 @@
 
 /* --------------------- VUE LISTE ---------------- */
 
-#forms-table{
+#forms-table {
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
   overflow: auto;
   width: 100%;
 }
@@ -162,8 +164,11 @@
 } */
 
 h4 {
-  text-align: center;
   background: linear-gradient(to bottom, #f3f3f3 0%,#acacac 100%);
+  border: 1px solid #acacac;
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
+  text-align: center;
   font-weight: normal;
   padding: 5px;
   margin: 0;
@@ -175,6 +180,7 @@ h4 {
 }
 
 th.mat-header-cell {
+  border: 1px solid #acacac;
   background: linear-gradient(to bottom, #f3f3f3 0%,#acacac 100%);
   color: black;
   font-size: 13px;
