--- a/client/src/app/dashboard/dashboard.component.css
+++ b/client/src/app/dashboard/dashboard.component.css
@@ -152,7 +152,7 @@
 /* --------------------- VUE LISTE ---------------- */
 
 #forms-table {
-  border-bottom-left-radius: 4px;
+  border-bottom-left-radius: 4px; /* TODO : (low priority) the bottom radius aren't effective */
   border-bottom-right-radius: 4px;
   overflow: auto;
   width: 100%;
