print amelioraations (incomplete)

--- a/client/src/app/templates/base-form.css
+++ b/client/src/app/templates/base-form.css
@@ -12,3 +12,12 @@ div.assignation_selected {
   .child_disabled * {  
     pointer-events: none;
   }
+
+  @media print{
+    
+        * {
+          width: 90%;
+        }
+    
+        
+  }
