--- a/client/src/app/templates/demande-achat/demande-achat.component.html
+++ b/client/src/app/templates/demande-achat/demande-achat.component.html
@@ -1,40 +1,37 @@
  <div id="form-header">
     <img src="assets/img/logo-poly-blanc.PNG" width=180 height=80>
     <h4>DEMANDE D'ACHAT</h4>
-    <div id="form-date">
+    <div id="form-date" class="child_disabled">
       <mat-form-field>
-        <input matInput [matDatepicker]="picker" placeholder="DATE" (click)="picker.open()">
-        <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-        <mat-datepicker #picker></mat-datepicker>
+        <input matInput placeholder="DATE" [(ngModel)]="date_creation">
       </mat-form-field>
     </div>
   </div>
 
   <!--Commande-->
- <div class="section-rectangle" id="demandeur">
+ <div class="section-rectangle" id="commande">
     <h6>COMMANDE</h6>
       <mat-grid-list cols="1" rowHeight="4em">
         <mat-grid-tile>
-              <mat-checkbox>Standard</mat-checkbox>
+              <mat-checkbox [(ngModel)]="commande.standard">Standard</mat-checkbox>
           <br>
-              <mat-checkbox>Entente</mat-checkbox>
+              <mat-checkbox [(ngModel)]="commande.entente">Entente</mat-checkbox>
           <br>
         </mat-grid-tile>
       </mat-grid-list>
     </div>
 
  <!--Service des finances-->
- <div class="section-rectangle" id="demandeur">
+ <div class="section-rectangle" id="finances">
   <h6>Réservé au Service des finances</h6>
     <mat-grid-list cols="1" rowHeight="4em">
       <mat-grid-tile>
         <mat-form-field>
-          <!-- <input matInput placeholder="Technique de réception" [(ngModel)]="demandeur.nom"> -->
-          <input matInput placeholder="Technique de réception">
+          <input matInput placeholder="Technique de réception" [(ngModel)]="finances.technique">
         </mat-form-field>
         <br>
         <mat-form-field>
-          <input matInput placeholder="No Bon de comande">
+          <input matInput placeholder="No. Bon de commande" [(ngModel)]="finances.commande">
         </mat-form-field>
         <br>
       </mat-grid-tile>
@@ -275,7 +272,7 @@
           </ng-container>
           <ng-container matColumnDef="total">
             <td mat-footer-cell *matFooterCellDef colspan="5">
-              <p>TOTAL: {{ ventilationTotal | currency}}</p>
+              <p>SOUS-TOTAL: {{ ventilationSTotal | currency}}</p>
             </td>
           </ng-container>
           <ng-container matColumnDef="addRow">
@@ -288,14 +285,18 @@
           <tr mat-row *matRowDef="let row; columns: displayedColumnsVentilation;"></tr>
           <tr mat-footer-row *matFooterRowDef="['total','addRow']"></tr>
         </table>
-        <mat-form-field>
-            <input matInput placeholder="Frais de transport">
+        <mat-form-field class="ventilation_autres">
+            <input matInput class="ventilation_autres" 
+            [(ngModel)]="ventilation.transport" placeholder="Frais de transport"
+            (ngModelChange)="updateTotal()" type="number">
           </mat-form-field>
           <mat-form-field>
-              <input matInput placeholder="Autres frais">
+              <input matInput class="ventilation_autres" 
+              [(ngModel)]="ventilation.autres" placeholder="Autres frais"
+              (ngModelChange)="updateTotal()" type="number">
           </mat-form-field>
-          <p><b>Total: </b></p>
-          <p><b>Engagement réel: </b></p>
+          <p><b>Total: </b> {{ ventilationTotal | currency }}</p>
+          <p><b>Engagement réel: </b>{{ engagement | currency }}</p>
     </div>
 </div>
     <!-- Commentaires et precision -->
