--- a/client/src/app/templates/base-form.css
+++ b/client/src/app/templates/base-form.css
@@ -17,7 +17,8 @@ div.assignation_selected {
   @media print{
     
         * {
-          max-width: 70%;
+          max-width: 100%;
+          page-break-inside : avoid;
         }
 
         button {
