impression acceptable sauf rapport deplacement

--- a/client/src/app/templates/form-deplacement/form-deplacement.component.css
+++ b/client/src/app/templates/form-deplacement/form-deplacement.component.css
@@ -255,3 +255,15 @@ input {
 #references div {
     background-color: #CCD4DF;
 }
+
+@media print{
+    
+        * {
+          max-width: 90%;
+        }
+
+        
+      
+    
+        
+  }
