--- a/client/src/app/templates/voyage-form/voyage-form.component.css
+++ b/client/src/app/templates/voyage-form/voyage-form.component.css
@@ -235,3 +235,14 @@ th {
     background: #CCD4DF;
     color: black;
 }
+
+@media print{
+    
+        * {
+          max-width: 91%;
+          
+        }
+      
+    
+        
+  }
