bugfix dashboard overlap

--- a/client/src/app/templates/form-deplacement/form-deplacement.component.css
+++ b/client/src/app/templates/form-deplacement/form-deplacement.component.css
@@ -262,7 +262,11 @@ input {
           max-width: 90%;
         }
 
+        #form-body {
         
+            width:100% ;
+        
+        }
       
     
         
