--- a/client/src/app/templates/form-deplacement/form-deplacement.component.html
+++ b/client/src/app/templates/form-deplacement/form-deplacement.component.html
@@ -5,6 +5,7 @@
   <h4>Rapport de déplacement et de représentation</h4>
 </div>
 
+<div id="form-body">
 <div id="entite-date">
 <div id="entite_externe">
   <h6>ENTITÉ EXTERNE</h6>
@@ -265,7 +266,6 @@
             <p>Réservé au service des finances</p>
         </div>
 </div>
-    <div id="annexe">
-        <app-annexe></app-annexe>
-    </div>
+</div>
+    
 </div>
