A: fix de dates

--- a/client/src/app/templates/form-deplacement/form-deplacement.component.html
+++ b/client/src/app/templates/form-deplacement/form-deplacement.component.html
@@ -40,7 +40,7 @@
 </mat-form-field>
 </div>
 
-<div id="date">
+<div id="date" class="child_disabled">
     <h6>date</h6>
     <mat-form-field>
         <input matInput [ngModel]="date_creation" placeholder="Choisir une date">
