--- a/client/src/app/templates/payment-form/paymentForm.component.html
+++ b/client/src/app/templates/payment-form/paymentForm.component.html
@@ -1,7 +1,7 @@
 <div id="form-header">
     <img src="assets/img/logo-POLY-forms.png" width=180 height=80>
     <h4>DEMANDE DE PAIEMENT</h4>
-    <div id="form-date">
+    <div id="form-date" class="child_disabled">
         <mat-form-field>
             <input matInput placeholder="DATE" [ngModel]="date_creation">
         </mat-form-field>
