Separation of concerns: metadata d'un formulaire affiché par son composant parent

--- a/client/src/app/edition/edition.component.css
+++ b/client/src/app/edition/edition.component.css
@@ -5,7 +5,14 @@
 }
 .flex-column
 {
+  display: flex;
   flex-direction: column;
+  align-content: center;
+}
+
+#metadata {
+  display: flex;
+  flex-direction: row;
 }
 
 .participants{
