--- a/client/src/app/templates/annexe/annexe.component.html
+++ b/client/src/app/templates/annexe/annexe.component.html
@@ -1,4 +1,6 @@
 <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
+
+<div id="tout">
 <div id="form-header">
     <img src="assets/img/logo-POLY-forms.png" width=180 height=80>
     <h4> 
@@ -400,4 +402,5 @@
             <tr mat-footer-row *matFooterRowDef="['addRow']" class="footer-adder"></tr>
     </table>
 
+</div>
 </div>
