--- a/client/src/app/dashboard/dashboard.component.html
+++ b/client/src/app/dashboard/dashboard.component.html
@@ -149,7 +149,7 @@
                 <ng-container [ngSwitch]="determineState(card)">
                   <div *ngSwitchCase="'EDIT'">
                       
-                    <button mat-raised-button id="modifier" [routerLink]="['/edit', card._id, 'modify']">
+                    <button mat-raised-button id="modifier" (click)="redirectTo(['/edit', card._id, 'modify'])">
                       MODIFIER
                     </button>
                   
@@ -157,14 +157,14 @@
                   </div>
                   <div *ngSwitchCase="'VALIDATE'">
                       
-                    <button mat-raised-button id="modifier" [routerLink]="['/edit', card._id, 'validate']">
+                    <button mat-raised-button id="modifier" (click)="redirectTo(['/edit', card._id, 'validate'])">
                       VALIDER
                     </button>
                    
                   </div>
                   <div *ngSwitchCase="'VIEW'">
                       
-                    <button mat-raised-button id="modifier" [routerLink]="['/edit', card._id, 'view']">
+                    <button mat-raised-button id="modifier" (click)="redirectTo(['/edit', card._id, 'view'])">
                       VISUALISER
                     </button>
                     
@@ -280,7 +280,7 @@
                 <ng-container [ngSwitch]="determineState(card)">
                   <div *ngSwitchCase="'EDIT'">
                       
-                    <button mat-raised-button id="modifier" [routerLink]="['/edit', card._id, 'modify']">
+                    <button mat-raised-button id="modifier" (click)="redirectTo(['/edit', card._id, 'modify'])">
                       MODIFIER
                     </button>
                   
@@ -288,14 +288,14 @@
                   </div>
                   <div *ngSwitchCase="'VALIDATE'">
                       
-                    <button mat-raised-button id="modifier" [routerLink]="['/edit', card._id, 'validate']">
+                    <button mat-raised-button id="modifier" (click)="redirectTo(['/edit', card._id, 'validate'])">
                       VALIDER
                     </button>
                     
                   </div>
                   <div *ngSwitchCase="'VIEW'">
                       
-                    <button mat-raised-button id="modifier" [routerLink]="['/edit', card._id, 'view']">
+                    <button mat-raised-button id="modifier" (click)="redirectTo(['/edit', card._id, 'view'])">
                       VISUALISER
                     </button>
                     
@@ -409,7 +409,7 @@
                 <ng-container [ngSwitch]="determineState(card)">
                   <div *ngSwitchCase="'EDIT'">
                       
-                    <button mat-raised-button id="modifier" [routerLink]="['/edit', card._id, 'modify']">
+                    <button mat-raised-button id="modifier" (click)="redirectTo(['/edit', card._id, 'modify'])">
                       MODIFIER
                     </button>
                   
@@ -417,14 +417,14 @@
                   </div>
                   <div *ngSwitchCase="'VALIDATE'">
                       
-                    <button mat-raised-button id="modifier" [routerLink]="['/edit', card._id, 'validate']">
+                    <button mat-raised-button id="modifier" (click)="redirectTo(['/edit', card._id, 'validate'])">
                       VALIDER
                     </button>
                    
                   </div>
                   <div *ngSwitchCase="'VIEW'">
                       
-                    <button mat-raised-button id="modifier" [routerLink]="['/edit', card._id, 'view']">
+                    <button mat-raised-button id="modifier" (click)="redirectTo(['/edit', card._id, 'view'])">
                       VISUALISER
                     </button>
                     
@@ -447,7 +447,7 @@
 
   <!---------------------liste A completer ------------------------->
   <div *ngIf="vueCarte == 'false' && !searchActivated">
-    <h4>Formulaires à compléter ({{aCompleterCards.length}})</h4>
+    <h4 class="header-title">Formulaires à compléter ({{aCompleterCards.length}})</h4>
     <table mat-table [dataSource]="aCompleterCards" id="forms-table">  
       <ng-container matColumnDef="idForm">
         <th mat-header-cell *matHeaderCellDef> id </th>
@@ -502,17 +502,17 @@
           <td mat-cell *matCellDef="let element">
               <ng-container [ngSwitch]="determineState(element)">
                   <div *ngSwitchCase="'EDIT'">
-                    <button mat-raised-button id="modifier" [routerLink]="['/edit', element._id, 'modify']">
+                    <button mat-raised-button id="modifier" (click)="redirectTo(['/edit', element._id, 'modify'])">
                       MODIFIER
                     </button>
                   </div>
                   <div *ngSwitchCase="'VALIDATE'">
-                    <button mat-raised-button id="modifier" [routerLink]="['/edit', element._id, 'validate']">
+                    <button mat-raised-button id="modifier" (click)="redirectTo(['/edit', element._id, 'validate'])">
                       VALIDER
                     </button>
                   </div>
                   <div *ngSwitchCase="'VIEW'">
-                    <button mat-raised-button id="modifier" [routerLink]="['/edit', element._id, 'view']">
+                    <button mat-raised-button id="modifier" (click)="redirectTo(['/edit', element._id, 'view'])">
                       VISUALISER
                     </button>
                   </div>
@@ -529,7 +529,7 @@
   
   <!---------------------liste Autres ------------------------->
   <div *ngIf="vueCarte == 'false' && !searchActivated">
-    <h4>Autres formulaires ({{autresCards.length}})</h4>
+    <h4 class="header-title">Autres formulaires ({{autresCards.length}})</h4>
     <table mat-table [dataSource]="autresCards" id="forms-table">  
       <ng-container matColumnDef="idForm">
         <th mat-header-cell *matHeaderCellDef> id </th>
@@ -584,17 +584,17 @@
           <td mat-cell *matCellDef="let element">
               <ng-container [ngSwitch]="determineState(element)">
                   <div *ngSwitchCase="'EDIT'">
-                    <button mat-raised-button id="modifier" [routerLink]="['/edit', element._id, 'modify']">
+                    <button mat-raised-button id="modifier" (click)="redirectTo(['/edit', element._id, 'modify'])">
                       MODIFIER
                     </button>
                   </div>
                   <div *ngSwitchCase="'VALIDATE'">
-                    <button mat-raised-button id="modifier" [routerLink]="['/edit', element._id, 'validate']">
+                    <button mat-raised-button id="modifier" (click)="redirectTo(['/edit', element._id, 'validate'])">
                       VALIDER
                     </button>
                   </div>
                   <div *ngSwitchCase="'VIEW'">
-                    <button mat-raised-button id="modifier" [routerLink]="['/edit', element._id, 'view']">
+                    <button mat-raised-button id="modifier" (click)="redirectTo(['/edit', element._id, 'view'])">
                       VISUALISER
                     </button>
                   </div>
@@ -610,7 +610,7 @@
 
   <!---------------------liste recherche ------------------------->
   <div *ngIf="vueCarte == 'false' && searchActivated">
-    <h4>Résultats de la recherche ({{displayedCards.length}})</h4>
+    <h4 class="header-title">Résultats de la recherche ({{displayedCards.length}})</h4>
     <table mat-table [dataSource]="displayedCards" id="forms-table">  
       <ng-container matColumnDef="idForm">
         <th mat-header-cell *matHeaderCellDef> id </th>
@@ -665,17 +665,17 @@
           <td mat-cell *matCellDef="let element">
               <ng-container [ngSwitch]="determineState(element)">
                   <div *ngSwitchCase="'EDIT'">
-                    <button mat-raised-button id="modifier" [routerLink]="['/edit', element._id, 'modify']">
+                    <button mat-raised-button id="modifier" (click)="redirectTo(['/edit', element._id, 'modify'])">
                       MODIFIER
                     </button>
                   </div>
                   <div *ngSwitchCase="'VALIDATE'">
-                    <button mat-raised-button id="modifier" [routerLink]="['/edit', element._id, 'validate']">
+                    <button mat-raised-button id="modifier" (click)="redirectTo(['/edit', element._id, 'validate'])">
                       VALIDER
                     </button>
                   </div>
                   <div *ngSwitchCase="'VIEW'">
-                    <button mat-raised-button id="modifier" [routerLink]="['/edit', element._id, 'view']">
+                    <button mat-raised-button id="modifier" (click)="redirectTo(['/edit', element._id, 'view'])">
                       VISUALISER
                     </button>
                   </div>
