--- a/client/src/app/dashboard/dashboard.component.html
+++ b/client/src/app/dashboard/dashboard.component.html
@@ -450,16 +450,16 @@
     <h4 class="header-title">Formulaires à compléter ({{aCompleterCards.length}})</h4>
     <table mat-table [dataSource]="aCompleterCards" id="forms-table">  
       <ng-container matColumnDef="idForm">
-        <th mat-header-cell *matHeaderCellDef> id </th>
+        <th mat-header-cell *matHeaderCellDef> Id </th>
         <td mat-cell *matCellDef="let element"> {{element.idForm}} </td>
       </ng-container>
       <ng-container matColumnDef="auteur">
-        <th mat-header-cell *matHeaderCellDef> auteur </th>
+        <th mat-header-cell *matHeaderCellDef> Auteur </th>
         <td mat-cell *matCellDef="let element"> {{element.auteur.nom}} </td>
       </ng-container>
   
       <ng-container matColumnDef="collaborateurs">
-        <th mat-header-cell *matHeaderCellDef> collaborateurs </th>
+        <th mat-header-cell *matHeaderCellDef> Collaborateurs </th>
         <td mat-cell *matCellDef="let element">
           <mat-select placeholder={{element.collaborateurs[0].nom}}>
             <ng-container *ngFor="let collaborateur of element.collaborateurs">
@@ -486,19 +486,19 @@
       </ng-container>
   
       <ng-container matColumnDef="statut">
-        <th mat-header-cell *matHeaderCellDef> état </th>
+        <th mat-header-cell *matHeaderCellDef> État </th>
         <td mat-cell *matCellDef="let element"> {{element.statut|state}} </td>
       </ng-container>
       <ng-container matColumnDef="modifieLe">
-        <th mat-header-cell *matHeaderCellDef> dernière modification </th>
+        <th mat-header-cell *matHeaderCellDef> Dernière modification </th>
         <td mat-cell *matCellDef="let element"> {{element.modifieLe|date:'dd-MM-yyyy hh:mm'}} </td>
       </ng-container>
       <ng-container matColumnDef="creeLe">
-        <th mat-header-cell *matHeaderCellDef> date de création </th>
+        <th mat-header-cell *matHeaderCellDef> Date de création </th>
         <td mat-cell *matCellDef="let element"> {{element.creeLe|date:'dd-MM-yyyy hh:mm'}} </td>
       </ng-container>
       <ng-container matColumnDef="modifier">
-          <th mat-header-cell *matHeaderCellDef> action </th>
+          <th mat-header-cell *matHeaderCellDef> Action </th>
           <td mat-cell *matCellDef="let element">
               <ng-container [ngSwitch]="determineState(element)">
                   <div *ngSwitchCase="'EDIT'">
@@ -532,16 +532,16 @@
     <h4 class="header-title">Autres formulaires ({{autresCards.length}})</h4>
     <table mat-table [dataSource]="autresCards" id="forms-table">  
       <ng-container matColumnDef="idForm">
-        <th mat-header-cell *matHeaderCellDef> id </th>
+        <th mat-header-cell *matHeaderCellDef> Id </th>
         <td mat-cell *matCellDef="let element"> {{element.idForm}} </td>
       </ng-container>
       <ng-container matColumnDef="auteur">
-        <th mat-header-cell *matHeaderCellDef> auteur </th>
+        <th mat-header-cell *matHeaderCellDef> Auteur </th>
         <td mat-cell *matCellDef="let element"> {{element.auteur.nom}} </td>
       </ng-container>
   
       <ng-container matColumnDef="collaborateurs">
-        <th mat-header-cell *matHeaderCellDef> collaborateurs </th>
+        <th mat-header-cell *matHeaderCellDef> Collaborateurs </th>
         <td mat-cell *matCellDef="let element">
           <mat-select placeholder={{element.collaborateurs[0].nom}}>
             <ng-container *ngFor="let collaborateur of element.collaborateurs">
@@ -568,19 +568,19 @@
       </ng-container>
   
       <ng-container matColumnDef="statut">
-        <th mat-header-cell *matHeaderCellDef> état </th>
+        <th mat-header-cell *matHeaderCellDef> État </th>
         <td mat-cell *matCellDef="let element"> {{element.statut|state}} </td>
       </ng-container>
       <ng-container matColumnDef="modifieLe">
-        <th mat-header-cell *matHeaderCellDef> dernière modification </th>
+        <th mat-header-cell *matHeaderCellDef> Dernière modification </th>
         <td mat-cell *matCellDef="let element"> {{element.modifieLe|date:'dd-MM-yyyy hh:mm'}} </td>
       </ng-container>
       <ng-container matColumnDef="creeLe">
-        <th mat-header-cell *matHeaderCellDef> date de création </th>
+        <th mat-header-cell *matHeaderCellDef> Date de création </th>
         <td mat-cell *matCellDef="let element"> {{element.creeLe|date:'dd-MM-yyyy hh:mm'}} </td>
       </ng-container>
       <ng-container matColumnDef="modifier">
-          <th mat-header-cell *matHeaderCellDef> action </th>
+          <th mat-header-cell *matHeaderCellDef> Action </th>
           <td mat-cell *matCellDef="let element">
               <ng-container [ngSwitch]="determineState(element)">
                   <div *ngSwitchCase="'EDIT'">
@@ -613,16 +613,16 @@
     <h4 class="header-title">Résultats de la recherche ({{displayedCards.length}})</h4>
     <table mat-table [dataSource]="displayedCards" id="forms-table">  
       <ng-container matColumnDef="idForm">
-        <th mat-header-cell *matHeaderCellDef> id </th>
+        <th mat-header-cell *matHeaderCellDef> Id </th>
         <td mat-cell *matCellDef="let element"> {{element.idForm}} </td>
       </ng-container>
       <ng-container matColumnDef="auteur">
-        <th mat-header-cell *matHeaderCellDef> auteur </th>
+        <th mat-header-cell *matHeaderCellDef> Auteur </th>
         <td mat-cell *matCellDef="let element"> {{element.auteur.nom}} </td>
       </ng-container>
   
       <ng-container matColumnDef="collaborateurs">
-        <th mat-header-cell *matHeaderCellDef> collaborateurs </th>
+        <th mat-header-cell *matHeaderCellDef> Collaborateurs </th>
         <td mat-cell *matCellDef="let element">
           <mat-select placeholder={{element.collaborateurs[0].nom}}>
             <ng-container *ngFor="let collaborateur of element.collaborateurs">
@@ -649,19 +649,19 @@
       </ng-container>
   
       <ng-container matColumnDef="statut">
-        <th mat-header-cell *matHeaderCellDef> état </th>
+        <th mat-header-cell *matHeaderCellDef> État </th>
         <td mat-cell *matCellDef="let element"> {{element.statut|state}} </td>
       </ng-container>
       <ng-container matColumnDef="modifieLe">
-        <th mat-header-cell *matHeaderCellDef> dernière modification </th>
+        <th mat-header-cell *matHeaderCellDef> Dernière modification </th>
         <td mat-cell *matCellDef="let element"> {{element.modifieLe|date:'dd-MM-yyyy hh:mm'}} </td>
       </ng-container>
       <ng-container matColumnDef="creeLe">
-        <th mat-header-cell *matHeaderCellDef> date de création </th>
+        <th mat-header-cell *matHeaderCellDef> Date de création </th>
         <td mat-cell *matCellDef="let element"> {{element.creeLe|date:'dd-MM-yyyy hh:mm'}} </td>
       </ng-container>
       <ng-container matColumnDef="modifier">
-          <th mat-header-cell *matHeaderCellDef> action </th>
+          <th mat-header-cell *matHeaderCellDef> Action </th>
           <td mat-cell *matCellDef="let element">
               <ng-container [ngSwitch]="determineState(element)">
                   <div *ngSwitchCase="'EDIT'">
