--- a/client/src/app/dashboard/dashboard.component.css
+++ b/client/src/app/dashboard/dashboard.component.css
@@ -72,6 +72,7 @@
 .canceled.mat-progress-bar,
 .completed.mat-progress-bar,
 .archived.mat-progress-bar {
+  margin: 5px;
   width: 230px;
   height: 20px;
 }
